--- a/app/package.json
+++ b/app/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "colors": "^1.3.3",
     "express": "^4.16.4",
     "mysql": "^2.16.0",
     "react": "^16.8.4",
