Changes to structure and code.

--- a/app/package.json
+++ b/app/package.json
@@ -2,9 +2,9 @@
   "name": "app",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "setup/index.js",
   "scripts": {
-    "setup": "npm install && node index.js",
+    "setup": "npm install && node setup/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
