--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "colors": "^1.3.3",
     "express": "^4.16.4",
+    "loopback": "^3.25.1",
     "mysql": "^2.16.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4"
