--- a/app/package.json
+++ b/app/package.json
@@ -10,11 +10,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "colors": "^1.3.3",
     "express": "^4.16.4",
+    "express-session": "^1.16.1",
     "loopback": "^3.25.1",
     "mysql": "^2.16.0",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "react": "^16.8.4",
-    "react-dom": "^16.8.4"
+    "react-dom": "^16.8.4",
+    "session-file-store": "^1.2.0",
+    "uuid": "^3.3.2"
   }
 }
