--- a/app/package.json
+++ b/app/package.json
@@ -18,6 +18,7 @@
     "mysql": "^2.16.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
+    "pug": "^2.0.3",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "session-file-store": "^1.2.0",
