--- a/app/package.json
+++ b/app/package.json
@@ -15,6 +15,7 @@
     "express": "^4.16.4",
     "express-session": "^1.16.1",
     "loopback": "^3.25.1",
+    "multer": "^1.4.1",
     "mysql": "^2.16.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
